# omill

./: .gitconfig-sandbox  .gitignore  .gitmodules  0x180001850  CLAUDE.md  CMakeLists.txt  README.md  VM_ARCHITECTURE.md  dna.md  eac_vm_tracer.py  full  summary  verbose  vmcmd.txt
lib/: CMakeLists.txt  Pipeline.cpp
lib/Analysis/: BinaryMemoryMap.cpp  BinaryRegion.cpp  CallGraphAnalysis.cpp  CallingConventionAnalysis.cpp  ExceptionInfo.cpp  IterativeLiftingSession.cpp  LiftedFunctionMap.cpp  RegisterRoleMap.cpp  RemillIntrinsicAnalysis.cpp  RemillStateVariableSolver.cpp  StateFieldAccessAnalysis.cpp  TargetArchAnalysis.cpp  VMHandlerChainSolver.cpp  VMHandlerGraph.cpp  VMTraceEmulator.cpp  VMTraceMap.cpp  VirtualCalleeRegistry.cpp  VirtualMachineModel.cpp
lib/Analysis/VirtualModel/: CallSites.cpp  CallState.cpp  Core.cpp  CoreDecls.h  DetailDecls.h  DetailTypes.h  DirectCallees.cpp  Dispatch.cpp  Driver.cpp  Facts.cpp  FlowDecls.h  Imports.cpp  Internal.h  Localization.cpp  LocalizedCalls.cpp  Model.cpp  Propagation.cpp  PropagationCache.cpp  Regions.cpp  Render.cpp  Replay.cpp  RootSlices.cpp  Specialization.cpp  StackFactTracker.cpp  StackModel.cpp  StateFacts.cpp  Summary.cpp  Targets.cpp  Transfers.cpp  VIP.cpp  ValueExprs.cpp
lib/Arch/: ArchABI.cpp
lib/BC/: BlockLifter.cpp  BufferMemoryAdapters.cpp  LiftDatabase.cpp  LiftDatabaseIO.cpp  LiftDatabaseProjection.cpp  LiftTargetPolicy.cpp  LiftingArtifactFixes.cpp  RemillProjectionLifter.cpp  StaticLiftBuilder.cpp  TraceLiftAnalysis.cpp  TraceLifter.cpp
lib/Devirtualization/: BinaryRegionReconstructor.cpp  BoundaryFact.cpp  ContinuationResolver.cpp  ExecutableTargetFact.cpp  Orchestrator.cpp  OutputRootClosure.cpp  ProtectorModel.cpp  Runtime.cpp
lib/Passes/: CFGRecovery.cpp  CoalesceByteReassembly.cpp  CollapsePartialXMMWrites.cpp  CollapseRemillSHRSwitch.cpp  CombinedFixedPointDevirt.cpp  ConstantMemoryFolding.cpp  ControlFlowUnflattener.cpp  DeadStateFlagElimination.cpp  DeadStateRoundtripElimination.cpp  DeadStateStoreDSE.cpp  DeadStateStoreElimination.cpp  EliminateDeadPaths.cpp  EliminateDeadTraceCounters.cpp  EliminateRedundantByteStores.cpp  EliminateStateStruct.cpp  ExpandI128DivRem.cpp  FoldConstantVectorChains.cpp  FoldProgramCounter.cpp  HashImportAnnotation.cpp  IncrementalDevirtualization.cpp  IndirectCallResolver.cpp  InlineJumpTargets.cpp  InterProceduralConstProp.cpp  InterProceduralDeadStateStore.cpp  IterativeBlockDiscovery.cpp  IterativeTargetResolution.cpp  JumpTableConcretizer.cpp  JumpTableUtils.h  KnownIndexSelect.cpp  LowerAtomicIntrinsics.cpp  LowerErrorAndMissing.cpp  LowerFlagIntrinsics.cpp  LowerFunctionCall.cpp  LowerFunctionReturn.cpp  LowerHyperCalls.cpp  LowerJump.cpp  LowerMemoryIntrinsics.cpp  LowerRemillIntrinsics.cpp  LowerResolvedDispatchCalls.cpp  LowerUndefinedIntrinsics.cpp  (+40 more)
lib/Remill/: Normalization.cpp
lib/Simplifier/: LLVMTranslator.cpp
lib/Tools/: LiftEventLogger.cpp  LiftRunContract.cpp
lib/Utils/: ImportHashDB.cpp  IntrinsicTable.cpp  LiftedNames.cpp  ProtectedBoundaryUtils.cpp  SouperZ3Translator.cpp  StateFieldMap.cpp  TranslationValidator.cpp
test_obf/: CMakeLists.txt
test_obf/cmut/: cmut.hxx  examplecxx
test_obf/src/: cloakwork_combined_funcs.cpp  cloakwork_import_funcs.cpp  cloakwork_str_funcs.cpp  cmut_funcs.cpp  combined_funcs.cpp  dllmain.cpp  lazy_funcs.cpp  mixed_funcs.cpp  ollvm_funcs.cpp  xorstr_funcs.cpp
tests/: CMakeLists.txt
tests/e2e/: ControlFlowFlatteningTest.cpp  CorpusDevirtualizationRegressionTest.cpp  DeobfuscationTest.cpp  ForcedExceptionTest.cpp  HyperCallRoundTripTest.cpp  LiftAndOptFixture.cpp  LiftAndOptFixture.h  MBAPatternTest.cpp  OLLVMTest.cpp  OpaquePredicateTest.cpp  PELoader.h  X86Disassembler.h
tests/unit/: ArithmeticEncodingObfTest.cpp  BMIMutationObfTest.cpp  BinaryMemoryMapTest.cpp  BinaryRegionReconstructorTest.cpp  BogusControlFlowObfTest.cpp  BoundaryFactTest.cpp  CFGRecoveryTest.cpp  CallGraphAnalysisTest.cpp  CallTargetBridgeTest.cpp  CallingConventionAnalysisTest.cpp  CoalesceByteReassemblyTest.cpp  CodeCloningObfTest.cpp  CollapsePartialXMMWritesTest.cpp  CombinedFixedPointDevirtTest.cpp  ConstantMemoryFoldingTest.cpp  ConstantUnfoldingObfTest.cpp  CustomABIObfTest.cpp  DeadStateFlagEliminationTest.cpp  DeadStateRoundtripEliminationTest.cpp  DeadStateStoreEliminationTest.cpp  DevirtualizationOrchestratorTest.cpp  EliminateDeadPathsTest.cpp  EliminateRedundantByteStoresTest.cpp  EliminateStateStructTest.cpp  ExceptionInfoTest.cpp  ExecutableTargetFactTest.cpp  FlatteningObfTest.cpp  FoldConstantVectorChainsTest.cpp  FoldProgramCounterTest.cpp  FunctionOutliningObfTest.cpp  FuzzSemanticVerificationTest.cpp  HashImportAnnotationTest.cpp  HyperCallCodegenTest.cpp  IfConversionObfTest.cpp  ImportHashDBTest.cpp  IndirectCallResolverTest.cpp  InlineJumpTargetsTest.cpp  InstructionSchedulingObfTest.cpp  InterProceduralConstPropTest.cpp  InterProceduralDeadStateStoreTest.cpp  (+81 more)
tests/utils/: CompileToNative.h  X86Disassembler.h
tools/ollvm-obf/: ArithmeticEncoding.cpp  ArithmeticEncoding.h  BMIMutation.cpp  BMIMutation.h  BogusControlFlow.cpp  BogusControlFlow.h  CMakeLists.txt  CodeCloning.cpp  CodeCloning.h  ConstantUnfolding.cpp  ConstantUnfolding.h  Flattening.cpp  Flattening.h  FunctionOutlining.cpp  FunctionOutlining.h  IfConversion.cpp  IfConversion.h  InstructionScheduling.cpp  InstructionScheduling.h  LoopToRecursion.cpp  LoopToRecursion.h  OpaquePredicateLib.h  OpaquePredicates.cpp  OpaquePredicates.h  PassFilter.h  README.md  RegisterPressure.cpp  RegisterPressure.h  StackRandomization.cpp  StackRandomization.h  StringEncryption.cpp  StringEncryption.h  Substitution.cpp  Substitution.h  Vectorize.cpp  Vectorize.h  main.cpp  standalone-CMakeLists.txt
tools/ollvm-plugin/: CMakeLists.txt  OllvmPlugin.cpp  ollvm_attrs.h
tools/omill-lift/: CMakeLists.txt  EnvSupport.h  InputLoader.cpp  InputLoader.h  LiftMain.cpp  LiftMain_abi.inc  LiftMain_devirt.inc  LiftMain_setup.inc  LiftMain_vm.inc  Options.cpp  Options.h  RecoveryBindings.cpp  RecoveryBindings.h  RuntimeAdapters.cpp  RuntimeAdapters.h  main.cpp
(+190 files in other folders)
